platform/plugins/Streams/web/css/tools/previews.css
/* ... */
.Streams_dialog_audio,
.Streams_dialog_video,
.Streams_dialog_pdf {
	min-width: 330px;
}

.Streams_dialog_audio .Q_tabbing_container .Q_tabbing_item,
.Streams_dialog_video .Q_tabbing_container .Q_tabbing_item,
.Streams_dialog_pdf .Q_tabbing_container .Q_tabbing_item {
	min-height: 100px;
}
.Streams_dialog_audio .Q_tabbing_container .Q_tabbing_item[data-content=upload] input.Streams_audio_file,
.Streams_dialog_audio .Q_tabbing_container .Q_tabbing_item[data-content=link] label,
.Streams_dialog_video .Q_tabbing_container .Q_tabbing_item[data-content=upload] input.Streams_video_file,
.Streams_dialog_video .Q_tabbing_container .Q_tabbing_item[data-content=link] label,
.Streams_dialog_pdf .Q_tabbing_container .Q_tabbing_item[data-content=upload] input.Streams_pdf_file,
.Streams_dialog_pdf .Q_tabbing_container .Q_tabbing_item[data-content=link] label {
	display: block;
	margin: 0 auto;
	white-space: nowrap;
}
.Streams_dialog_audio .Q_tabbing_container .Streams_audio_composer_upload_limit,
.Streams_dialog_video .Q_tabbing_container .Streams_video_composer_upload_limit,
.Streams_dialog_pdf .Q_tabbing_container .Streams_pdf_composer_upload_limit {
	margin: 3px auto 0;
	display: block;
	text-align: center;
	font-size: 14px;
	color: red;
}
.Streams_dialog_audio .Q_tabbing_container .Q_tabbing_item[data-content=link] label button,
.Streams_dialog_video .Q_tabbing_container .Q_tabbing_item[data-content=link] label button,
.Streams_dialog_pdf .Q_tabbing_container .Q_tabbing_item[data-content=link] label button {
	display: inline;
}
.Streams_dialog_audio .Q_tabbing_container audio {
	width: 100%;
}
.Streams_dialog_audio .Streams_audio_composer_upload_limit,
.Streams_dialog_video .Streams_video_composer_upload_limit,
.Streams_dialog_pdf .Streams_pdf_composer_upload_limit {
	margin: 3px auto 0;
	display: block;
	text-align: center;
	font-size: 14px;
	color: red;
}
.Streams_dialog_audio .Streams_audio_composer .Q_tabbing_tabs > .Q_tabbing_tab,
.Streams_dialog_video .Streams_video_composer .Q_tabbing_tabs > .Q_tabbing_tab,
.Streams_dialog_pdf .Streams_pdf_composer .Q_tabbing_tabs > .Q_tabbing_tab {
	width: 60px;
	background-repeat: no-repeat;
	background-position: top center;
	padding-top: 40px;
}
.Streams_dialog_audio .Streams_audio_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=edit],
.Streams_dialog_video .Streams_video_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=edit],
.Streams_dialog_pdf .Streams_pdf_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=edit] {
	background-image: url(../../../Q/img/audio/edit/40.png);
}
.Streams_dialog_audio .Streams_audio_composer[data-composer=true] .Q_tabbing_tabs .Q_tabbing_tab[data-name=edit],
.Streams_dialog_audio .Streams_audio_composer[data-composer=true] .Q_tabbing_container .Q_tabbing_item[data-content=edit],
.Streams_dialog_video .Streams_video_composer[data-composer=true] .Q_tabbing_tabs .Q_tabbing_tab[data-name=edit],
.Streams_dialog_video .Streams_video_composer[data-composer=true] .Q_tabbing_container .Q_tabbing_item[data-content=edit],
.Streams_dialog_pdf .Streams_pdf_composer[data-composer=true] .Q_tabbing_tabs .Q_tabbing_tab[data-name=edit],
.Streams_dialog_pdf .Streams_pdf_composer[data-composer=true] .Q_tabbing_container .Q_tabbing_item[data-content=edit]{
	display: none;
}
.Streams_dialog_audio .Q_tabbing_item[data-content=edit] input[name=title],
.Streams_dialog_audio .Q_tabbing_item[data-content=edit] textarea[name=content],
.Streams_dialog_video .Q_tabbing_item[data-content=edit] input[name=title],
.Streams_dialog_video .Q_tabbing_item[data-content=edit] textarea[name=content],
.Streams_dialog_pdf .Q_tabbing_item[data-content=edit] input[name=title],
.Streams_dialog_pdf .Q_tabbing_item[data-content=edit] textarea[name=content] {
	width: 100%;
	height: 40px;
	margin-bottom: 5px;
}
.Streams_dialog_audio .Streams_audio_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=record] {
	background-image: url(../../../Q/img/audio/microphone/40.png);
}
.Streams_dialog_audio .Streams_audio_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=upload],
.Streams_dialog_video .Streams_video_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=upload],
.Streams_dialog_pdf .Streams_pdf_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=upload] {
	background-image: url(../../../Q/img/audio/upload/40.png);
}
.Streams_dialog_audio .Streams_audio_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=link],
.Streams_dialog_video .Streams_video_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=link],
.Streams_dialog_pdf .Streams_pdf_composer .Q_tabbing_tabs > .Q_tabbing_tab[data-name=link] {
	background-image: url(../../../Q/img/audio/link/40.png);
}

.Streams_dialog_audio .Streams_audio_composer .Streams_audio_composer_submit,
.Streams_dialog_video .Streams_video_composer .Streams_video_composer_submit,
.Streams_dialog_pdf .Streams_pdf_composer .Streams_pdf_composer_submit {
	text-align: center;
	white-space: nowrap;
	margin-top: 10px;
}
.Streams_dialog_audio .Streams_audio_composer .Streams_audio_composer_submit button,
.Streams_dialog_video .Streams_video_composer .Streams_video_composer_submit button,
.Streams_dialog_pdf .Streams_pdf_composer .Streams_pdf_composer_submit button {
	display: inline-block;
	width: 100%;
}
.Streams_dialog_audio button,
.Streams_dialog_audio input,
.Streams_dialog_video button,
.Streams_dialog_video input,
.Streams_dialog_pdf button,
.Streams_dialog_pdf input{
	height: 40px;
}
.Streams_dialog_audio .Streams_audio_composer_submit button[name=reset],
.Streams_dialog_video .Streams_video_composer_submit button[name=reset],
.Streams_dialog_pdf .Streams_pdf_composer_submit button[name=reset] {
	display: none;
}

.Streams_preview_dummy {
	height: 50px;
	background-position: left center;
	background-repeat: no-repeat;
	background-image: url(../../../Q/img/throbbers/loading.gif);
}

/* Promise play dialog */
.Streams_audio_preview_dialog_promisePlay.Q_overlay { width: auto; }
/* ... */

